--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ project(Structs
 ##
 
 ## Compile flags
-SET(GCC_DEBUGGING_COMPILE_FLAGS "-Wall -ggdb3")
+SET(GCC_DEBUGGING_COMPILE_FLAGS "-ggdb3")
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_DEBUGGING_COMPILE_FLAGS}")
 
 set(SRCS
