Added some boilerplate cmake and main.pp file in examples/darray

--- a/examples/darray/CMakeLists.txt
+++ b/examples/darray/CMakeLists.txt
@@ -7,9 +7,7 @@ project(
 )
 
 set(sources
-    constructors.cpp
+    main.cpp
 )
 
 add_executable(${PROJECT_NAME}Constructor constructors)
-
-target_link_directories()
