--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,16 +9,29 @@ project(
   LANGUAGES CXX
 )
 
-verbose_message("Adding tests under ${CMAKE_PROJECT_NAME}Test...")
+verbose_message("Setting up target ${CMAKE_PROJECT_NAME}Test...")
+
 
 add_executable(
-    ${CMAKE_PROJECT_NAME}Test
+    ${CMAKE_PROJECT_NAME}_test
     ${test_sources}
     ${test_headers}
 )
 
 add_executable(
-    ${CMAKE_PROJECT_NAME}TestCxx11
+    ${CMAKE_PROJECT_NAME}_test_cxx11
+    ${test_sources}
+    ${test_headers}
+)
+
+add_executable(
+    ${CMAKE_PROJECT_NAME}_test_cxx17
+    ${test_sources}
+    ${test_headers}
+)
+
+add_executable(
+    ${CMAKE_PROJECT_NAME}_test_cxx20
     ${test_sources}
     ${test_headers}
 )
@@ -27,8 +40,9 @@ add_executable(
   # Set the compiler standard
   #
 
-target_compile_features(${CMAKE_PROJECT_NAME}Test PUBLIC cxx_std_17)
-target_compile_features(${CMAKE_PROJECT_NAME}TestCxx11 PUBLIC cxx_std_11)
+target_compile_features(${CMAKE_PROJECT_NAME}_test_cxx11 PUBLIC cxx_std_11)
+target_compile_features(${CMAKE_PROJECT_NAME}_test_cxx17 PUBLIC cxx_std_17)
+target_compile_features(${CMAKE_PROJECT_NAME}_test_cxx20 PUBLIC cxx_std_20)
 
   #
   # Setup code coverage if enabled
@@ -68,7 +82,7 @@ if(${CMAKE_PROJECT_NAME}_USE_GTEST)
 
     message(STATUS "linking gtest libraries to ${CMAKE_PROJECT_NAME}Test ..")
     target_link_libraries(
-        ${CMAKE_PROJECT_NAME}Test
+        ${CMAKE_PROJECT_NAME}_test
         PUBLIC
         GTest::gtest_main
         ${GOOGLE_MOCK_LIBRARIES}
@@ -76,7 +90,23 @@ if(${CMAKE_PROJECT_NAME}_USE_GTEST)
     )
 
     target_link_libraries(
-        ${CMAKE_PROJECT_NAME}TestCxx11
+        ${CMAKE_PROJECT_NAME}_test_cxx11
+        PUBLIC
+        GTest::gtest_main
+        ${GOOGLE_MOCK_LIBRARIES}
+        ${${CMAKE_PROJECT_NAME}_TEST_LIB}
+    )
+
+    target_link_libraries(
+        ${CMAKE_PROJECT_NAME}_test_cxx17
+        PUBLIC
+        GTest::gtest_main
+        ${GOOGLE_MOCK_LIBRARIES}
+        ${${CMAKE_PROJECT_NAME}_TEST_LIB}
+    )
+
+    target_link_libraries(
+        ${CMAKE_PROJECT_NAME}_test_cxx20
         PUBLIC
         GTest::gtest_main
         ${GOOGLE_MOCK_LIBRARIES}
@@ -85,12 +115,22 @@ if(${CMAKE_PROJECT_NAME}_USE_GTEST)
 
     message(STATUS "linking test directory to ${CMAKE_PROJECT_NAME}Test ..")
     target_include_directories(
-        ${CMAKE_PROJECT_NAME}Test
+        ${CMAKE_PROJECT_NAME}_test
         PUBLIC
         ${CMAKE_SOURCE_DIR}/test
     )
     target_include_directories(
-        ${CMAKE_PROJECT_NAME}TestCxx11
+        ${CMAKE_PROJECT_NAME}_test_cxx11
+        PUBLIC
+        ${CMAKE_SOURCE_DIR}/test
+    )
+    target_include_directories(
+        ${CMAKE_PROJECT_NAME}_test_cxx17
+        PUBLIC
+        ${CMAKE_SOURCE_DIR}/test
+    )
+    target_include_directories(
+        ${CMAKE_PROJECT_NAME}_test_cxx20
         PUBLIC
         ${CMAKE_SOURCE_DIR}/test
     )
@@ -98,13 +138,25 @@ if(${CMAKE_PROJECT_NAME}_USE_GTEST)
 elseif(${CMAKE_PROJECT_NAME}_USE_CATCH2)
     find_package(Catch2 REQUIRED)
     target_link_libraries(
-        ${CMAKE_PROJECT_NAME}Test
+        ${CMAKE_PROJECT_NAME}_test
         PUBLIC
         Catch2::Catch2
         ${${CMAKE_PROJECT_NAME}_TEST_LIB}
     )
     target_link_libraries(
-        ${CMAKE_PROJECT_NAME}TestCxx11
+        ${CMAKE_PROJECT_NAME}_test_cxx11
+        PUBLIC
+        Catch2::Catch2
+        ${${CMAKE_PROJECT_NAME}_TEST_LIB}
+    )
+    target_link_libraries(
+        ${CMAKE_PROJECT_NAME}_test_cxx17
+        PUBLIC
+        Catch2::Catch2
+        ${${CMAKE_PROJECT_NAME}_TEST_LIB}
+    )
+    target_link_libraries(
+        ${CMAKE_PROJECT_NAME}_test_cxx20
         PUBLIC
         Catch2::Catch2
         ${${CMAKE_PROJECT_NAME}_TEST_LIB}
@@ -119,8 +171,11 @@ endif()
 #
 
 include(GoogleTest)
-gtest_discover_tests(${CMAKE_PROJECT_NAME}Test)
-gtest_discover_tests(${CMAKE_PROJECT_NAME}TestCxx11)
+gtest_discover_tests(${CMAKE_PROJECT_NAME}_test)
+gtest_discover_tests(${CMAKE_PROJECT_NAME}_test_cxx11)
+gtest_discover_tests(${CMAKE_PROJECT_NAME}_test_cxx17)
+gtest_discover_tests(${CMAKE_PROJECT_NAME}_test_cxx20)
+
 
 
 verbose_message("Finished adding unit tests for ${CMAKE_PROJECT_NAME}.")
