--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -149,12 +149,11 @@ jobs:
         run: |
           mkdir build
           mkdir instdir
-          cmake \
-            -S . \
-            -B . \
+          cd build
+          cmake .. \
             -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
             -G "${{ matrix.config.generators }}" \
-            -DCMAKE_INSTALL_PREFIX:PATH=instdir
+            -DCMAKE_INSTALL_PREFIX:PATH=../instdir
       - name: Build
         shell: bash
         run: cmake --build . --config ${{ matrix.config.build_type }}
