Updated toplevel CmakeLists.txt
Install directory depends on project name, since header files are located in include/container/, project name must have the same name as this directory for the script to work properly.

--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -90,6 +90,8 @@ jobs:
         if: startsWith(matrix.config.os, 'windows')
         run: |
           choco install ninja cmake
+          choco install visualstudio2019community
+          choco install visualstudio2019-workload-nativedesktop # required  
           ninja --version
           cmake --version
         # cmd "${{ matrix.config.environment_script }}"
