--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -178,8 +178,9 @@ jobs:
         name: Build
         shell: bash
         run: cmake --build build --config ${{ matrix.config.build_type }}
-
-      - name: Install Strip
+      
+      - if: startsWith(matrix.config.cxx, 'cl') == false
+        name: Install Strip
         shell: bash
         run: cmake --install build --strip
 
