--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -33,9 +33,9 @@ jobs:
             build_type: "Release",
             cc: "cl",
             cxx: "cl",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
+            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
             archiver: "7z a",
-            generators: "Visual Studio 16 2019"
+            generators: "Visual Studio 17 2022"
           }
         - {
             name: "Windows Latest MinGW",
@@ -106,8 +106,8 @@ jobs:
         if: startsWith(matrix.config.os, 'windows') && steps.cache-win-deps.outputs.cache-hit != 'true'
         run: |
           choco install ninja cmake
-          choco install visualstudio2019community
-          choco install visualstudio2019-workload-nativedesktop # required  
+          #choco install visualstudio2019community
+          #choco install visualstudio2019-workload-nativedesktop # required  
           ninja --version
           cmake --version
           cmd "${{ matrix.config.environment_script }}"
