--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -81,89 +81,40 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - name: Print env
-        run: |
-          echo github.event.action: ${{ github.event.action }}
-          echo github.event_name: ${{ github.event_name }}
       
-      - if: startsWith(matrix.config.os, 'windows') && startsWith(matrix.config.cxx, 'cl')
-        name: cache deps windows
-        uses: actions/cache@v1.0.3
-        id: cache-deps-windows
-        env:
-          cache-name: cache-win-deps
-        with:
-          path: |
-            "C:\ProgramData\chocolatey\lib\ninja"
-            "C:\ProgramData\chocolatey\lib\cmake"
-            "C:"
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
+      #- name: cache build
+      #  uses: actions/cache@v3
+      #  id: cache-config
+      #  env:
+      #    cache-name: cache-config
+      #  with:
+      #    path: |
+      #      "${{github.workspace}}/build"     
+      #    key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/Makefile') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-build-${{ env.cache-name }}-
+      #      ${{ runner.os }}-build-
+      #      ${{ runner.os }}-
 
       - name: Install dependencies on windows
-        env:
-          CACHE_HIT: ${{ steps.cache-win-deps.outputs.cache-hit }}
-        if: startsWith(matrix.config.os, 'windows') && steps.cache-win-deps.outputs.cache-hit != 'true'
-        run: |
-          choco install ninja cmake
-          #choco install visualstudio2019community
-          #choco install visualstudio2019-workload-nativedesktop # required  
-          ninja --version
-          cmake --version
-          cmd "${{ matrix.config.environment_script }}"
-
+        if: startsWith(matrix.config.name, 'windows')
+        uses: lukka/get-cmake@latest  # <--= Just this one-liner suffices.
+          
       - name: Install dependencies on ubuntu
         if: startsWith(matrix.config.name, 'Ubuntu_Latest_GCC')
-        run: |
-          sudo apt-get update
-          sudo apt-get install ninja-build cmake
-          ninja --version
-          cmake --version
-          gcc --version
+        uses: lukka/get-cmake@latest
+      
       - name: Install dependencies on ubuntu9
         if: startsWith(matrix.config.name, 'Ubuntu_GCC_9')
-        run: |
-          echo Update gcc-9 =======================================================================
-          echo gcc version before
-          gcc --version
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-          sudo apt-get update
-          sudo apt-get install ninja-build cmake gcc-9 g++-9
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9 --slave /usr/bin/gcov gcov /usr/bin/gcov-9
-          echo gcc version after
-          gcc --version
-          echo Update ninja =======================================================================
-          echo ninja version before
-          ninja --version
-          # wget https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-linux.zip
-          wget https://github.com/ninja-build/ninja/releases/latest/download/ninja-linux.zip
-          sudo unzip ninja-linux.zip -d /usr/local/bin/
-          sudo update-alternatives --install /usr/bin/ninja ninja /usr/local/bin/ninja 1 --force
-          echo ninja version after
-          ninja --version
-          echo Update cmake =======================================================================
-          echo cmake version before
-          cmake --version
-          # curl --silent "https://api.github.com/repos/Kitware/CMake/releases/latest" | sed -n 's/.*tag_name":\s"\(.*\)".*/\1/p' | head -2
-          # wget https://github.com/Kitware/CMake/releases/latest/download/cmake-3.16.5-Linux-x86_64.sh
-          cmake_version=$(curl --silent "https://api.github.com/repos/Kitware/CMake/releases/latest" | sed -n 's/.*tag_name":\s"\(.*\)".*/\1/p' | head -2 | cut -c 2-)
-          echo cmake download latest v$cmake_version version
-          wget https://github.com/Kitware/CMake/releases/download/v$cmake_version/cmake-$cmake_version-Linux-x86_64.sh
-          chmod +x cmake-$cmake_version-Linux-x86_64.sh
-          sudo mkdir /opt/cmake
-          sudo ./cmake-$cmake_version-Linux-x86_64.sh --prefix=/opt/cmake --skip-license
-          sudo update-alternatives --install /usr/bin/cmake cmake /opt/cmake/bin/cmake 1 --force
-          echo cmake version after
-          cmake --version
+        uses: lukka/get-cmake@latest  # <--= Just this one-liner suffices.
+      
       - name: Install dependencies on macos
-        if: startsWith(matrix.config.os, 'macos')
-        run: |
-          brew install p7zip cmake ninja
-          ninja --version
-          cmake --version
+        if: startsWith(matrix.config.name, 'macos')
+        uses: lukka/get-cmake@latest
           
       - name: Configure
         shell: bash
+        if: ${{ steps.cache-config.outputs.cache-hit != 'true' }}
         run: |
           mkdir build
           mkdir instdir
@@ -172,17 +123,11 @@ jobs:
             -B build \
             -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
             -G "${{ matrix.config.generators }}" \
-            -DCMAKE_INSTALL_PREFIX:PATH=../instdir \
-            -Dcontainer_ENABLE_UNIT_TESTING=OFF \
-            -Dcontainer_BUILD_EXECUTABLE=ON
+            -DCMAKE_INSTALL_PREFIX:PATH=../instdir
       
       - name: Build
         shell: bash
         run: cmake --build build --config ${{ matrix.config.build_type }}
-      
-      - name: Install Strip
-        shell: bash
-        run: cmake --install build --strip
 
       - name: Pack
         shell: bash
