--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -129,6 +129,12 @@ jobs:
         shell: bash
         run: cmake --build build --config ${{ matrix.config.build_type }}
 
+      - name: Test
+        shell: bash
+        #if: ! startsWith(matrix.config.name, 'windows')
+        run: |
+          ./build/test/container/container_container_test_cxx20
+          
       - name: Pack
         shell: bash
         working-directory: instdir
