--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -123,7 +123,9 @@ jobs:
             -B build \
             -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
             -G "${{ matrix.config.generators }}" \
-            -DCMAKE_INSTALL_PREFIX:PATH=../instdir
+            -DCMAKE_INSTALL_PREFIX:PATH=../instdir \
+            -Dcontainer_ENABLE_UNIT_TESTING=OFF   \
+            -Dcontainer_BUILD_EXECUTABLE=ON
       
       - name: Build
         shell: bash
