--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -121,7 +121,7 @@ jobs:
           cmake  \
             -S . \
             -B build \
-            -G "Ninja"
+            -G "Ninja" \
             -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
             -G "${{ matrix.config.generators }}" \
             -DCMAKE_INSTALL_PREFIX:PATH=../instdir \
