updated workflow script

--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -134,18 +134,30 @@ jobs:
 
       - name: Test std_cxx20
         shell: bash
+        if: ! startsWith(matrix.config.name, 'windows')
         run: |
           ./build/test/container/container_container_test_cxx20
-
+        if: startsWith(matrix.config.name, 'windows')
+        run: |
+          ./build/test/container/container_container_test_cxx20.exe
+        
       - name: Test std_cxx17
         shell: bash
+        if: ! startsWith(matrix.config.name, 'windows')
         run: |
           ./build/test/container/container_container_test_cxx17
+        if: startsWith(matrix.config.name, 'windows')
+        run: |
+          ./build/test/container/container_container_test_cxx17.exe
 
       - name: Test std_cxx11
         shell: bash
+        if: ! startsWith(matrix.config.name, 'windows')
         run: |
           ./build/test/container/container_container_test_cxx11
+        if: startsWith(matrix.config.name, 'windows')
+        run: |
+          ./build/test/container/container_container_test_cxx11.exe
 
       - name: Pack
         shell: bash
