updated workflow script

--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -137,27 +137,25 @@ jobs:
         if: startsWith(matrix.config.name, 'windows') == false
         run: |
           ./build/test/container/container_container_test_cxx20
-        if: startsWith(matrix.config.name, 'windows') == true
-        run: |
-          ./build/test/container/container_container_test_cxx20.exe
         
       - name: Test std_cxx17
         shell: bash
         if: startsWith(matrix.config.name, 'windows') == false
         run: |
           ./build/test/container/container_container_test_cxx17
-        if: startsWith(matrix.config.name, 'windows')
-        run: |
-          ./build/test/container/container_container_test_cxx17.exe
 
       - name: Test std_cxx11
         shell: bash
-        if: startsWith(matrix.config.name, 'windows') == false
+        if: ! startsWith(matrix.config.name, 'windows') == false
         run: |
           ./build/test/container/container_container_test_cxx11
-        if: startsWith(matrix.config.name, 'windows')
+      
+      - if: startsWith(matrix.config.name, 'windows')
+        name: Test on Windows
         run: |
           ./build/test/container/container_container_test_cxx11.exe
+          ./build/test/container/container_container_test_cxx17.exe
+          ./build/test/container/container_container_test_cxx20.exe
 
       - name: Pack
         shell: bash
