--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -147,7 +147,7 @@ jobs:
         run: |
           ./build/test/container/container_container_test_cxx11
       
-      - if: startsWith(matrix.config.name, 'windows')
+      - if: startsWith(matrix.config.name, 'windows') && startsWith(matrix.config.cxx, 'cl') 
         name: Test on Windows
         shell: bash
         run: |
