--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -109,25 +109,19 @@ jobs:
         if: startsWith(matrix.config.name, 'macos')
         uses: lukka/get-cmake@latest
           
-      - name: Configure
-        shell: bash
-        if: ${{ steps.cache-config.outputs.cache-hit != 'true' }}
-        run: |
-          mkdir build
-          mkdir instdir
-          cmake  \
-            -S . \
-            -B build \
-            -G "Ninja" \
-            -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
-            -G "${{ matrix.config.generators }}" \
-            -DCMAKE_INSTALL_PREFIX:PATH=../instdir \
-            -Dcontainer_ENABLE_UNIT_TESTING=ON   \
-            -Dcontainer_BUILD_EXECUTABLE=ON
-      
-      - name: Build
-        shell: bash
-        run: cmake --build build --config ${{ matrix.config.build_type }}
+      - name: ccache
+        uses: hendrikmuhs/ccache-action@v1.1
+        with:
+          key: ${{ matrix.config.os }}-${{ matrix.config.build_type }}
+
+      - name: build with cmake
+        uses: lukka/run-cmake@v3
+        with:
+          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
+          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+          cmakeAppendedArgs: '-DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D CMAKE_C_COMPILER_LAUNCHER=ccache -D CMAKE_CXX_COMPILER_LAUNCHER=ccache'
+          buildWithCMake: true
+          buildDirectory: '${{ github.workspace }}/build'
 
       - name: Test std_cxx20
         shell: bash
