--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ if (UNIX)
     add_compile_options("$<$<CONFIG:DEBUG>:-D_DEBUG>")    #this will allow to use same _DEBUG macro available in both Linux as well as Windows - MSCV environment. Easy to put Debug specific code.
 endif (UNIX)
 
+
+set(FETCHCONTENT_BASE_DIR "${CMAKE_SOURCE_DIR}/cache")
 ##################################################################################
 ##################################################################################
 
