updated workflow script

--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -97,7 +97,7 @@ jobs:
           
       - name: create install directory
         shell: bash
-        runs:
+        run:
           mkdir instdir
       
       - name: ccache
