--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -134,11 +134,11 @@ jobs:
       
       - if: startsWith(matrix.config.name, 'windows') && startsWith(matrix.config.cxx, 'cl') 
         name: Test on Windows
-        shell: bash
+        shell: cmd
         run: |
-          ./${{github.workspace}}/build/test/container/Release/container_container_test_cxx11.exe
-          ./${{github.workspace}}/build/test/container/Release/container_container_test_cxx17.exe
-          ./${{github.workspace}}/build/test/container/Release/container_container_test_cxx20.exe
+          build/test/container/Release/container_container_test_cxx11.exe
+          build/test/container/Release/container_container_test_cxx17.exe
+          build/test/container/Release/container_container_test_cxx20.exe
 
       - name: Pack
         shell: bash
