--- a/.github/workflows/xcontainer.yaml
+++ b/.github/workflows/xcontainer.yaml
@@ -27,7 +27,7 @@ jobs:
             name: "Windows Latest MSVC",
             os: windows-latest,
             artifact: "windows_msvc.7z",
-            build_type: ["Release", "Debug"],
+            build_type: "Release",
             cc: "cl",
             cxx: "cl",
             environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
@@ -38,7 +38,7 @@ jobs:
             name: "Windows Latest MinGW",
             os: windows-latest,
             artifact: "windows_mingw.7z",
-            build_type: ["Release", "Debug"],
+            build_type: "Release",
             cc: "gcc",
             cxx: "g++",
             archiver: "7z a",
@@ -48,7 +48,7 @@ jobs:
             name: "Ubuntu_Latest_GCC",
             os: ubuntu-latest,
             artifact: "ubuntu_gcc.7z",
-            build_type: ["Release", "Debug"],
+            build_type: "Release",
             cc: "gcc",
             cxx: "g++",
             archiver: "7z a",
@@ -58,7 +58,7 @@ jobs:
             name: "Ubuntu_GCC_9",
             os: ubuntu-latest,
             artifact: "ubuntu_gcc9.7z",
-            build_type: ["Release", "Debug"],
+            build_type: "Release",
             cc: "gcc",
             cxx: "g++",
             archiver: "7z a",
@@ -68,7 +68,7 @@ jobs:
             name: "macOS Latest Clang",
             os: macos-latest,
             artifact: "macos_clang.7z",
-            build_type: ["Release", "Debug"],
+            build_type: "Release",
             cc: "clang",
             cxx: "clang++",
             archiver: "7za a",
