using only one test executable

--- a/test/container/CMakeLists.txt
+++ b/test/container/CMakeLists.txt
@@ -171,9 +171,9 @@ endif()
 
 include(GoogleTest)
 gtest_discover_tests(${CMAKE_PROJECT_NAME}_container_test)
-gtest_discover_tests(${CMAKE_PROJECT_NAME}_container_test_cxx11)
-gtest_discover_tests(${CMAKE_PROJECT_NAME}_container_test_cxx17)
-gtest_discover_tests(${CMAKE_PROJECT_NAME}_container_test_cxx20)
+#gtest_discover_tests(${CMAKE_PROJECT_NAME}_container_test_cxx11)
+#gtest_discover_tests(${CMAKE_PROJECT_NAME}_container_test_cxx17)
+#gtest_discover_tests(${CMAKE_PROJECT_NAME}_container_test_cxx20)
 
 
 
